--- a/translations/values-ru/strings.xml
+++ b/translations/values-ru/strings.xml
@@ -34,8 +34,8 @@
     <string name="how_ip">"Как узнать IP адрес компьютера – смотрите тут: http://ip.junkcode.net/"</string>
     <string name="how_ip_der">"Если Вы не знаете IP адрес компьютера – нажмите здесь"</string>
     <string name="ip_err">Неверный IP адрес</string>
-    <string name="ip_err_wrong">"Введите IP адрес в формате \r\nXXX.XXX.XXX.XXX \r\nНажмите "Помощь" для получения детальных инструкций."</string>
-    <string name="ip_err_local">"127.0.0.1 - неверный адрес. \r\nНажмите "Помощь" для получения детальных инструкций."</string>
+    <string name="ip_err_wrong">"Введите IP адрес в формате \nXXX.XXX.XXX.XXX \nНажмите "Помощь" для получения детальных инструкций."</string>
+    <string name="ip_err_local">"127.0.0.1 - неверный адрес. \nНажмите "Помощь" для получения детальных инструкций."</string>
     <string-array name="updates_speed_array">
         <item >Очень быстро</item>
         <item >Быстро</item>
@@ -48,14 +48,14 @@
 
      <string name="info_title">О приложении</string>
     <string name="info_msg">
-        "Это неофициальное приложение, сделанное поклонниками War Thunder!\r\n"
-        "Это приложение всё ещё на стадии бета-теста, не стесняйтесь обращаться к нам с ошибками или новыми идеями в:\r\n"
-        "http://junkcode.net/forum \r\n"
-        "\r\n"
-        "Перевод на русский – Антон aka "StariyMetall", Дмитрий aka "Deus_Ex_Perceptron"\r\n"        
+        "Это неофициальное приложение, сделанное поклонниками War Thunder!\n"
+        "Это приложение всё ещё на стадии бета-теста, не стесняйтесь обращаться к нам с ошибками или новыми идеями в:\n"
+        "http://junkcode.net/forum \n"
+        "\n"
+        "Перевод на русский – Антон aka "StariyMetall", Дмитрий aka "Deus_Ex_Perceptron"\n"
     </string>
     <string name="donate_line">  
-        "Вам понравилось это приложение? Выразите поддержку этому проекту, сделав пожертвование по адресу http://junkcode.net для будущего развития.\r\n"
+        "Вам понравилось это приложение? Выразите поддержку этому проекту, сделав пожертвование по адресу http://junkcode.net для будущего развития.\n"
         </string>
      <string name="info_update_title">Обновление новостей</string>
      
@@ -105,7 +105,7 @@
     
     <string name="ext_unlock">Разблокировать бонусы</string>
     <string name="ext_unlock_det">
-        "Бонусы разблокируются при пожертвовании <b><i>любой</i></b> суммы или за помощь в развитии приложения\r\n(Если вы жертвовали ранее и не получили код, напишите нам по e-mail)"</string>
+        "Бонусы разблокируются при пожертвовании <b><i>любой</i></b> суммы или за помощь в развитии приложения\n(Если вы жертвовали ранее и не получили код, напишите нам по e-mail)"</string>
     <string name="ext_unlock_dial">"Код разблокировки:"</string>
     
     <string name="ext_link">Приязать к G+ аккаунту</string>
