--- a/translations/values-uk/strings.xml
+++ b/translations/values-uk/strings.xml
@@ -34,8 +34,8 @@
     <string name="how_ip">" Як одержати IP адресу – дивитеся отут: http://ip.junkcode.net/"</string>
     <string name="how_ip_der">"Якщо Ви не знаєте, як одержати IP адресу – натисніть тут"</string>
     <string name="ip_err">IP адреса невірна</string>
-    <string name="ip_err_wrong">"Уведіть адресу у форматі \r\nxxx.XXX.XXX.XXX \r\n Кликніть на "Допомогу" для одержання детальних інструкцій."</string>
-    <string name="ip_err_local">"127.0.0.1 невірна адреса. \r\n Кликніть на "Допомогу" для одержання детальних інструкцій."</string>
+    <string name="ip_err_wrong">"Уведіть адресу у форматі \nxxx.XXX.XXX.XXX \n Кликніть на "Допомогу" для одержання детальних інструкцій."</string>
+    <string name="ip_err_local">"127.0.0.1 невірна адреса. \n Кликніть на "Допомогу" для одержання детальних інструкцій."</string>
     <string-array name="updates_speed_array">
         <item >Дуже швидко</item>
         <item >Швидко</item>
@@ -48,14 +48,14 @@
 
      <string name="info_title"> Про додаток</string>
     <string name="info_msg">
-        "Цей неофіційний додаток, зроблене для аматорів War Thunder!\r\n"
-        "Цей додаток усе ще на стадії бети, але не соромтеся звертатися до мене з помилками або новими ідеями в:\r\n"
-        "http://junkcode.net/forum \r\n"
-        "\r\n"
-        "Переклад на російську – Антон aka "Stariymetall"\r\n"        
+        "Цей неофіційний додаток, зроблене для аматорів War Thunder!\n"
+        "Цей додаток усе ще на стадії бети, але не соромтеся звертатися до мене з помилками або новими ідеями в:\n"
+        "http://junkcode.net/forum \n"
+        "\n"
+        "Переклад на російську – Антон aka "Stariymetall"\n"
     </string>
     <string name="donate_line">  
-        " чи Подобається вам цей додаток? Скажіть це пожертвуванням на http://junkcode.net для майбутнього розвитку.\r\n"
+        " чи Подобається вам цей додаток? Скажіть це пожертвуванням на http://junkcode.net для майбутнього розвитку.\n"
         </string>
      <string name="info_update_title">Відновлення новин</string>
      
@@ -105,7 +105,7 @@
     
     <string name="ext_unlock">Розблокувати додаткові послуги</string>
     <string name="ext_unlock_det">
-        "Додаткові послуги будуть розблоковані якщо пожертвуйте будь яку <b><i>суму</i></b> \r\n(Якщо ви раніше вже жертвували і не отримали код активації, то напишіть на на електрону пошту)"</string>
+        "Додаткові послуги будуть розблоковані якщо пожертвуйте будь яку <b><i>суму</i></b> \n(Якщо ви раніше вже жертвували і не отримали код активації, то напишіть на на електрону пошту)"</string>
     <string name="ext_unlock_dial">"Код розблокування:"</string>
     
     <string name="ext_link">Посилання на акаунт G+</string>
