--- a/translations/values-ko/strings.xml
+++ b/translations/values-ko/strings.xml
@@ -34,8 +34,8 @@
     <string name="how_ip">"IP 주소를 찾는방법: http://ip.junkcode.net/help"</string>
     <string name="how_ip_der">"만약 당신이 IP 주소를 찾는방법을 모르신다면 이곳을 클릭하세요.</string>
     <string name="ip_err">IP 주소가 유효하지 않습니다.</string>
-    <string name="ip_err_wrong">"입력되는 주소의 형식 \r\nXXX.XXX.XXX.XXX \r\n 정확한 내용은 도움말에서 참고하세요."</string>
-    <string name="ip_err_local">"127.0.0.1 은 올바른 IP 주소가 아닙니다. \r\n 정확한 내용은 도움말에서 참고하세요 ."</string>
+    <string name="ip_err_wrong">"입력되는 주소의 형식 \nXXX.XXX.XXX.XXX \n 정확한 내용은 도움말에서 참고하세요."</string>
+    <string name="ip_err_local">"127.0.0.1 은 올바른 IP 주소가 아닙니다. \n 정확한 내용은 도움말에서 참고하세요 ."</string>
     <string-array name="updates_speed_array">
         <item >매우 빠르게</item>
         <item >빠르게</item>
@@ -48,16 +48,16 @@
 
      <string name="info_title">이 앱에 관하여..</string>
     <string name="info_msg">
-        "이 앱은 WarThunder 팬들에 의해 만들어졌습니다!\r\n"
-        "이 앱은 아직 개발중입니다. 하지만 저희에게 버그나 새로운 아이디어를 이곳으로 보내주세요:\r\n"
-        "http://junkcode.net/forum \r\n"
-        "\r\n"
-        "우리는 번역할 사람들을 찾고있습니다, 만약 관심이 있으시다면 옆에있는 주소로 가셔서 한번 확인해보세요: http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \r\n"        
+        "이 앱은 WarThunder 팬들에 의해 만들어졌습니다!\n"
+        "이 앱은 아직 개발중입니다. 하지만 저희에게 버그나 새로운 아이디어를 이곳으로 보내주세요:\n"
+        "http://junkcode.net/forum \n"
+        "\n"
+        "우리는 번역할 사람들을 찾고있습니다, 만약 관심이 있으시다면 옆에있는 주소로 가셔서 한번 확인해보세요: http://junkcode.net/forum/viewtopic.php?f=14&amp;t=18 \n"        
     </string>
     <string name="donate_line">
-        "이 앱을 좋아하십니까? 미래의 개발자들을 위해 주원을 해주신다면 감사하겠습니다! :http://junkcode.net , 한글번역자 플러스친구: 세이퍼네트워크. \r\n"
+        "이 앱을 좋아하십니까? 미래의 개발자들을 위해 주원을 해주신다면 감사하겠습니다! :http://junkcode.net , 한글번역자 플러스친구: 세이퍼네트워크. \n"
         </string>
-     <string name="info_update_title">업데이트 소식/string>
+     <string name="info_update_title">업데이트 소식</string>
      
     <string name="version">앱 버전:</string>
     <string name="ok">확인</string>
@@ -99,13 +99,13 @@
     <string name="horizontal_distance">수평각도 보기</string>
     
     <string name="pref_header_extras">기타</string>
-    <string name="prediction"예측</string>
+    <string name="prediction">예측</string>
     <string name="self">혼자서</string>
     <string name="show_intro_screen">인트로 splash 보기</string>
     
     <string name="ext_unlock">기타 잠금해제</string>
     <string name="ext_unlock_det">
-        "기타는 <b><i>아무</i></b> 후원에 의해 잠금이 풀립니다\r\n(만약 당신이 후원을하고 코드를 받지 못하였다면 우리에게 이메일을 주십시오)"</string>
+        "기타는 <b><i>아무</i></b> 후원에 의해 잠금이 풀립니다\n(만약 당신이 후원을하고 코드를 받지 못하였다면 우리에게 이메일을 주십시오)"</string>
     <string name="ext_unlock_dial">"잠금해제 코드:"</string>
     
     <string name="ext_link">G+ 로 연결</string>
@@ -181,7 +181,7 @@
     <string name="coop_start">새로운 협동모드 시작</string>
     <string name="coop_join">협동모드 참여</string>
     <string name="coop_title">협동모드 세션</string>
-    <string name="close_enemy_detection"적 감지 닫기</string>
+    <string name="close_enemy_detection">적 감지 닫기</string>
     <string name="far_enemy_detection">멀리있는 적 감지</string>
     <string name="coop_connecting_to_id">협동모드 연결 ID:</string>
     <string name="coop_session_started">협동모드 세션 시작됨.</string>
