--- a/translations/values-pl/strings.xml
+++ b/translations/values-pl/strings.xml
@@ -34,8 +34,8 @@
 	<string name="how_ip">"Jak znaleźć swoje IP: http://ip.junkcode.net/"</string>
 	<string name="how_ip_der">"Jeśli nie wiesz jak znaleźć swoje IP kliknij tutaj"</string>
 	<string name="ip_err">Niewłaściwy adres IP</string>
-	<string name="ip_err_wrong">"Wpisz adres w formacie \r\nXXX.XXX.XXX.XXX \r\n Kliknij na pomoc aby dowiedzieć się jak znaleźć właściwy adres."</string>
-	<string name="ip_err_local">"127.0.0.1 nie jest właściwym adresem. \r\n Kliknij na pomoc aby dowiedzieć się jak znaleźć właściwy adres."</string>
+	<string name="ip_err_wrong">"Wpisz adres w formacie \nXXX.XXX.XXX.XXX \n Kliknij na pomoc aby dowiedzieć się jak znaleźć właściwy adres."</string>
+	<string name="ip_err_local">"127.0.0.1 nie jest właściwym adresem. \n Kliknij na pomoc aby dowiedzieć się jak znaleźć właściwy adres."</string>
 	<string-array name="updates_speed_array">
 	<item >Bardzo szybko</item>
 	<item >Szybko</item>
@@ -48,14 +48,14 @@
 	
 	<string name="info_title">O</string>
 	<string name="info_msg">
-		"To NIE jest oficjalna aplikacja do War Thunder!!\r\n"
-		"Ta aplikacja wciąż jest w wersji beta, błędy i sugestie można zgłaszać na :\r\n"
-		"http://junkcode.net/forum \r\n"
-		"\r\n"
+		"To NIE jest oficjalna aplikacja do War Thunder!!\n"
+		"Ta aplikacja wciąż jest w wersji beta, błędy i sugestie można zgłaszać na :\n"
+		"http://junkcode.net/forum \n"
+		"\n"
     </string>
     
 	<string name="donate_line"> 
-	   "Lubisz tą aplikacje? Okaż to wspomagając autora na http://junkcode.net dla przyszłego rozwoju.\r\n"
+	   "Lubisz tą aplikacje? Okaż to wspomagając autora na http://junkcode.net dla przyszłego rozwoju.\n"
 	</string>
 	<string name="info_update_title">Informacje o aktualizacji</string>
 	
@@ -105,7 +105,7 @@
     
     <string name="ext_unlock">Odblokuj dodatki</string>
     <string name="ext_unlock_det">
-       "Dodatki są odblokowane przez dotację w <b><i>jakiejkolwiek</i></b> ilości lub poprzez udział w tworzeniu aplikacji.\r\n(If you donated earlier and didn\'t get the code yet write us an email)"</string>
+       "Dodatki są odblokowane przez dotację w <b><i>jakiejkolwiek</i></b> ilości lub poprzez udział w tworzeniu aplikacji.\n(If you donated earlier and didn\'t get the code yet write us an email)"</string>
     <string name="ext_unlock_dial">"Kod odblokowujący:"</string>
     
     <string name="ext_link">Link do konta Google+</string>
